extend byte-compiled ignore to sub-directories

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@ Data/
 joanne/
 
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+**/__pycache__/
+**/*.py[cod]
+**/*$py.class
