remove quotes from tag_prefix

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ VCS = git
 style = pep440
 versionfile_source = joanne/_version.py
 versionfile_build = joanne/_version.py
-tag_prefix = 'v'
+tag_prefix = v
 parentdir_prefix = joanne-
