include temp P3_circles.nc to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ joanne.egg*/
 # extra files (detours)
 joanne/Level_2/ds_list.nc
 joanne/Level_2/list_for_flight_segmentation.py
+**/P3_circles.nc
 
 # YAML files
 **/*.yaml
