--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [versioneer]
 VCS = git
-style = pep440
+style = pep440-post
 versionfile_source = joanne/_version.py
 versionfile_build = joanne/_version.py
 tag_prefix = v
