--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,30 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+    - name: Build docs
+      run: |
+        cd docs && make html
+    - name: Archive build artifacts (i.e. documentation)
+      uses: actions/upload-artifact@v2
+      with:
+        name: docs
+        path: |
+          docs/build
+
+  publish:
+    needs: build
+    # Only publish documentation when merging into `origin/main`.`
+    if: "github.event_name == 'push' && github.ref == 'refs/heads/main' && github.repository_owner == 'Geet George'"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download compiled book
+        uses: actions/download-artifact@v2
+        with:
+          name: docs
+          path: build
+      - name: Publish book on github pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: build/html
